--- a/ObligatorioTaller/app.json
+++ b/ObligatorioTaller/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "crud_usuarios",
-    "slug": "crud_usuarios",
+    "name": "obligatorio_taller",
+    "slug": "obligatorio_taller",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
