--- a/ObligatorioTaller/package.json
+++ b/ObligatorioTaller/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crud_usuarios",
+  "name": "obligatorio_taller",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -13,13 +13,13 @@
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "expo": "~44.0.0",
-    "expo-sqlite": "~10.2.0",
-    "expo-status-bar": "~1.3.0",
+    "expo-sqlite": "~10.1.0",
+    "expo-status-bar": "~1.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-gesture-handler": "~2.2.1",
-    "react-native-safe-area-context": "4.2.4",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7"
   },
